@@ -1,5 +1,14 @@
 2007-11-21 Eloy Duran <e.duran@superalloy.nl>
 
+	* lib/rucola/initializer.rb,
+	  test/test_initializer.rb:
+
+	- Spec'd the class methods of Initializer.
+	- Changed the way plugins are loaded.
+	- Refactored some minor stuff.
+
+2007-11-21 Eloy Duran <e.duran@superalloy.nl>
+
 	* TODO,
 	  lib/rucola/rucola_support/notifications/notifications.rb,
 	  test/test_notifications.rb:
